2020-10-15 
	Diagrama de proceso del sistema +ingenio

2020-10-14 
	Miel F.M. Gal/TCM
	Agregar sumatoria "Sacarosa en Silos"
	BLC: Consultar datos y cálculos de detalle12

2010-10-11
	BlcCenicana consultar datos

2010-10-11
	BlcCenicanaP y BlcCelicanaPDetalle
	BlcCenicana y BlcCelicanaDetalle

2010-10-11
	Crear BlcAdmin para ingresar datos acumulados iniciales
	Crear valores del día anterior en tabla detalle1
	Crear valores del día anterior en tabla detalle12
	Crear valores del día anterior en tabla detalle13
	BLC: Agregrar items de detalle12 y detalle13

2020-10-04
	BlcDetalle13P
	BlcDetalle13 
	BlcDetalle12P
	BlcDetalle12
	Agregar indicadores en indicador.csv
	Jugo Diluido (BR)

2020-10-01
	Ajustar BlcTest

2020-09-30 
	BlcDetalle1Action: implementar getValor()
	BlcDetalle1Action: Actualizar en getView() y con setValores() fuera del switch
	No se muestra BlcP.descripcion
	BlcTest: Agregar Pestaña Presentación de azúcar por presentaciones
	Pestaña Presentación de azúcar por presentaciones
	Agregar StockFabrica.ax140
	Ajustar getDetallePorIndicador() en StockFabricaDetalleAction
	Agregar StockFabrica.ax132
	Agregar StockFabrica.ax135

2020-09-29
	Agregar StockFabrica.ax140 en Plantilla
	Ajuste de StockFabricaTest
	Subir Plantilla StockProceso
	Subir Plantilla Material

2020-09-28
	Cambio campo por id en SqlUtil.getValMatBlcAcu()
	Query para consulta valores BLC acumulados por material
	Agregar columna acumulado en BlcDetalle1

2020-09-27 
	BlcDetalle1 sumatoria por material (día anterior)
	Determinar campos de excel BLC
	Agregar parámetro ZAFRA_VIGENTE
	Agregar Zafra.codigo (int)

2020-09-26 
	Impedir CargarItems en DiaTrabajo cerrado

2020-09-25 
	Renombrar InicioZafra a Zafra
	Eliminar Preferencias

2020-09-24 
	Rediseñar BlcDetalle1
	BlcDetalle1 campo editable
	BLC ingresar datos como StockFabrica

2020-09-23 
	Agregar totales en StockProceso
	Agregar totales en StockProcesoP
	Plantilla para BLC en Datos Día

2020-09-22 
	Ajuste Formulario Caña

2020-09-17 