@@ -1,3 +1,7 @@
+2020-10-20
+	BLC: Consultar datos y cálculos de BlcDetalle13
+	Modificar acumulado de Sacarosa en Silos Día Anterior en BlcDetalle12
+
 2020-10-15 
 	Diagrama de proceso del sistema +ingenio
 
